src/App.scss
.App {
  font-family: 'Roboto', sans-serif;
  min-height: 100vh;
  padding: 10px;
  background-color: #100f1d;
  color: white;

  .weather-and-locations {
    display: flex;

    .locations {
      width: 40%;
    }
  }

  .locations-sm {
    .locations-sm-title {
      width: 80%;
      text-align: center;
      font-weight: 500;
      line-height: 1.5rem;
      margin: 50px auto 25px auto;
    }
  }

  @media only screen and (min-width: 768px) {
    padding: 10px 75px;
  }

  @media only screen and (orientation:landscape) {
    padding: 50px 100px;
  }
}

// Loading spinner styles
.lds-ripple {
  display: block;
  position: relative;
  width: 80px;
  height: 80px;
  margin: 150px auto 50px auto;
}
.lds-ripple div {
  position: absolute;
  border: 4px solid #fff;
  opacity: 1;
  border-radius: 50%;
  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
.lds-ripple div:nth-child(2) {
  animation-delay: -0.5s;
}
@keyframes lds-ripple {
  0% {
    top: 36px;
    left: 36px;
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: 0px;
    left: 0px;
    width: 72px;
    height: 72px;
    opacity: 0;
  }
}

